package com.github.dtmo.bookshop;

public interface User {
    String getId();
}
